testsuite/tests/typecheck/should_fail/T2534.hs
module T2534 where

foo = foldr (>>=) [] []
